支持中国科技核心期刊目录

--- a/manifest.json
+++ b/manifest.json
@@ -52,7 +52,8 @@
 				"show_ranking/ranking/eii.js",
 				"show_ranking/ranking/nju.js",
 				"show_ranking/ranking/ahci.js",
-				
+				"show_ranking/ranking/zhongguokejihexin.js",
+
                 "show_ranking/site/siteUtil.js",
                 "show_ranking/site/acm.js",
                 "show_ranking/site/ei.js",
@@ -100,7 +101,8 @@
 				"show_ranking/data/eiiRankingName.js",
 				"show_ranking/data/njuRankingName.js",
 				"show_ranking/data/ahciRankingName.js",
-				
+				"show_ranking/data/zhongguokejihexinRankingName.js",
+
                 "show_ranking/script.js",
 
 				
